build: enable Prettier
- fix lint warning of deprecated API
- remove clang-format
- configure for VSCode

--- a/projects/web/src/_mixins.scss
+++ b/projects/web/src/_mixins.scss
@@ -4,9 +4,13 @@
 
 // Generate min-width breakpoint. Mobile first, Preferred!
 @mixin breakpoint($point) {
-  @media (min-width: $point) { @content ; }
+  @media (min-width: $point) {
+    @content;
+  }
 }
 // Generate max-width breakpoint. Use sparingly!
 @mixin breakpoint-max($point) {
-  @media (max-width: $point) { @content ; }
+  @media (max-width: $point) {
+    @content;
+  }
 }
