--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -6,8 +6,9 @@
         <a [routerLink]="['acerca']">Conócenos</a>
       </li>
       <li>
-        <a href="https://goo.gl/forms/MZa4w3AeILjsoTGA2" rel="noopener"
-           target="_blank">Regístrate</a>
+        <a href="https://goo.gl/forms/MZa4w3AeILjsoTGA2" rel="noopener" target="_blank"
+          >Regístrate</a
+        >
       </li>
       <li>
         <a href="https://chat.angular.lat/" rel="noopener" target="_blank">Chatear</a>
@@ -21,9 +22,9 @@
       <li>
         <a [routerLink]="['organizar/meetup']">Guía de Meetups</a>
       </li>
-<!--      <li>-->
-<!--        <a [routerLink]="['terminos']">Términos</a>-->
-<!--      </li>-->
+      <!--      <li>-->
+      <!--        <a [routerLink]="['terminos']">Términos</a>-->
+      <!--      </li>-->
       <li>
         <a href="mailto:soporte@angular.lat">Soporte</a>
       </li>
@@ -36,8 +37,9 @@
         <a href="https://twitter.com/AngularHispana" rel="noopener" target="_blank">Twitter</a>
       </li>
       <li>
-        <a href="https://www.facebook.com/ComunidadAngularHispano" rel="noopener"
-           target="_blank">Facebook</a>
+        <a href="https://www.facebook.com/ComunidadAngularHispano" rel="noopener" target="_blank"
+          >Facebook</a
+        >
       </li>
     </ul>
   </div>
