--- a/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
+++ b/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
@@ -18,33 +18,40 @@
   <section>
     <h2>2. Comportamiento esperado</h2>
     <ul>
-      <li>Evitar usar expresiones o gestos insultantes, humillantes o intimidatorios para
-        referirnos a otros.
+      <li>
+        Evitar usar expresiones o gestos insultantes, humillantes o intimidatorios para referirnos a
+        otros.
       </li>
       <li>Ejercita la consideración y el respeto en tus comunicaciones y acciones.</li>
-      <li>Absténte de adoptar una conducta y un lenguaje degradantes, discriminatorios, abusivos o
+      <li>
+        Absténte de adoptar una conducta y un lenguaje degradantes, discriminatorios, abusivos o
         acosadores.
       </li>
-      <li>Evitar comportamientos que agredan las expresiones de identidad, género, creencias
+      <li>
+        Evitar comportamientos que agredan las expresiones de identidad, género, creencias
         religiosas, acciones que lastimen o los aíslen a otros.
       </li>
       <li>Evitar comentarios sobre ideas políticas.</li>
-      <li>No se toleran conductas físicas y actitudes dirigidas al descrédito personal, físico o
+      <li>
+        No se toleran conductas físicas y actitudes dirigidas al descrédito personal, físico o
         emocional de cualquier persona.
       </li>
       <li>No se toleran chistes y comentarios excluyentes, sexistas y racistas.</li>
       <li>Se rechaza actitudes de hostigamiento.</li>
-      <li>Se rechaza el acoso: este se entiende como cualquier tipo de comentario verbal que
-        refuerce discriminación por género, identidad y expresión de género, orientación sexual,
+      <li>
+        Se rechaza el acoso: este se entiende como cualquier tipo de comentario verbal que refuerce
+        discriminación por género, identidad y expresión de género, orientación sexual,
         discapacidad, apariencia física, tamaño corporal, raza, edad o religión en contextos
         laborales o sociales.
       </li>
       <li>No se tolera el contacto físico y/o la atención sexual no deseada.</li>
-      <li>Promover la igualdad de oportunidades de formación, educación, intercambio y
+      <li>
+        Promover la igualdad de oportunidades de formación, educación, intercambio y
         retroalimentación antes, durante y después de los eventos.
       </li>
       <li>Intenta colaborar en lugar de generar conflicto.</li>
-      <li>Sé consciente de tu entorno y de tus compañeros participantes. Alerta a líderes de la
+      <li>
+        Sé consciente de tu entorno y de tus compañeros participantes. Alerta a líderes de la
         comunidad si notas una situación peligrosa, alguien en apuros, o violaciones de este Código
         de Conducta, incluso si parecen intrascendentes.
       </li>
@@ -88,8 +95,9 @@
     </p>
     <ul>
       <li>El "racismo inverso", "sexismo inverso" y "cisfobia".</li>
-      <li>Comunicación razonable de límites, como "déjame en paz", "vete" o "no estoy discutiendo
-        esto contigo".
+      <li>
+        Comunicación razonable de límites, como "déjame en paz", "vete" o "no estoy discutiendo esto
+        contigo".
       </li>
       <li>Al comunicarse en un "tono", no se encuentra agradable.</li>
       <li>
@@ -111,15 +119,18 @@
     </ul>
     <h3>¿Qué pasa después?</h3>
     <ul>
-      <li>Una vez haya sido notificada el no cumplimiento de la norma, el equipo de liderazgo se
+      <li>
+        Una vez haya sido notificada el no cumplimiento de la norma, el equipo de liderazgo se
         reunirán y analizarán el caso.
       </li>
       <li>Los incidentes presentados se manejarán con discreción.</li>
-      <li>Los organizadores se comunicarán con la persona que incumplió la norma y tomarán las
-        medidas respectivas.
+      <li>
+        Los organizadores se comunicarán con la persona que incumplió la norma y tomarán las medidas
+        respectivas.
       </li>
       <li>Se realizará un acompañamiento a la persona agredida y se apoyará.</li>
-      <li>Si el incidente se hace público, Angular Hispano no se hace responsable de los perjuicios
+      <li>
+        Si el incidente se hace público, Angular Hispano no se hace responsable de los perjuicios
         que esto pueda ocasionar en el agresor o el agredido.
       </li>
     </ul>
@@ -142,20 +153,30 @@
       <li>Andrés Villanueva</li>
       <li>Michael Prentice</li>
       <li>
-        <a href="https://www.javascriptandfriends.com/codeofconduct" rel="noopener"
-           target="_blank">javascript&friends</a>
+        <a href="https://www.javascriptandfriends.com/codeofconduct" rel="noopener" target="_blank"
+          >javascript&friends</a
+        >
       </li>
       <li>
-        <a href="https://github.com/angular/code-of-conduct/blob/master/CODE_OF_CONDUCT.md"
-             rel="noopener" target="_blank">Angular</a>
+        <a
+          href="https://github.com/angular/code-of-conduct/blob/master/CODE_OF_CONDUCT.md"
+          rel="noopener"
+          target="_blank"
+          >Angular</a
+        >
       </li>
       <li>
-        <a href="https://shecodes.gitbook.io/she-codes-angular/codigo-de-conducta" rel="noopener"
-           target="_blank">She Codes Angular</a>
+        <a
+          href="https://shecodes.gitbook.io/she-codes-angular/codigo-de-conducta"
+          rel="noopener"
+          target="_blank"
+          >She Codes Angular</a
+        >
       </li>
       <li>
-        <a href="https://github.com/colombia-dev/codigo-de-conducta" rel="noopener"
-           target="_blank">Colombia dev</a>
+        <a href="https://github.com/colombia-dev/codigo-de-conducta" rel="noopener" target="_blank">
+          Colombia dev</a
+        >
       </li>
     </ul>
   </section>
