build: enable RxJS-specific tslint rules and ban some types
- ban Number, String, Boolean types as they can cause some bugs/errors

--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -3,10 +3,10 @@
     #drawer
     class="sidenav"
     fixedInViewport="true"
-    [disableClose]="!(navService.isHandset$ | async)"
-    [attr.role]="(navService.isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(navService.isHandset$ | async) ? 'over' : 'side'"
-    [opened]="(navService.isHandset$ | async) === false"
+    [disableClose]="!(navService.isHandset | async)"
+    [attr.role]="(navService.isHandset | async) ? 'dialog' : 'navigation'"
+    [mode]="(navService.isHandset | async) ? 'over' : 'side'"
+    [opened]="(navService.isHandset | async) === false"
   >
     <mat-toolbar>Menú</mat-toolbar>
     <mat-nav-list (click)="onNavigation()">
