--- a/projects/web/src/app/top-nav/top-nav.component.html
+++ b/projects/web/src/app/top-nav/top-nav.component.html
@@ -4,7 +4,7 @@
     aria-label="Toggle sidenav"
     mat-icon-button
     (click)="navService.toggleDrawer()"
-    *ngIf="navService.isHandset$ | async"
+    *ngIf="navService.isHandset | async"
   >
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
