build: agregar reglas codelizer a11y tslint

--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     #drawer
     class="sidenav"
     fixedInViewport="true"
-    [disableClose]="!(navService.isHandset | async)"
+    [disableClose]="(navService.isHandset | async) === false"
     [attr.role]="(navService.isHandset | async) ? 'dialog' : 'navigation'"
     [mode]="(navService.isHandset | async) ? 'over' : 'side'"
     [opened]="(navService.isHandset | async) === false"
