--- a/projects/web/src/app/auth/auth.component.html
+++ b/projects/web/src/app/auth/auth.component.html
@@ -3,31 +3,31 @@
     [providers]="[providers.Google]"
     (onSuccess)="onSuccess($event)"
     (onError)="onError($event)"
-    [signInTabText]="'ngxauthfirebaseui.signInTabText'"
-    [signInCardTitleText]="'ngxauthfirebaseui.signInCardTitleText'"
-    [loginButtonText]="'ngxauthfirebaseui.loginButtonText'"
-    [forgotPasswordButtonText]="'ngxauthfirebaseui.forgotPasswordButtonText'"
-    [nameText]="'ngxauthfirebaseui.nameText'"
-    [nameErrorRequiredText]="'ngxauthfirebaseui.nameErrorRequiredText'"
-    [nameErrorMinLengthText]="'ngxauthfirebaseui.nameErrorMinLengthText'"
-    [nameErrorMaxLengthText]="'ngxauthfirebaseui.nameErrorMaxLengthText'"
-    [emailText]="'ngxauthfirebaseui.emailText'"
-    [emailErrorRequiredText]="'ngxauthfirebaseui.emailErrorRequiredText'"
-    [emailErrorPatternText]="'ngxauthfirebaseui.emailErrorPatternText'"
-    [passwordText]="'ngxauthfirebaseui.passwordText'"
-    [passwordErrorRequiredText]="'ngxauthfirebaseui.passwordErrorRequiredText'"
-    [registerTabText]="'ngxauthfirebaseui.registerTabText'"
-    [registerCardTitleText]="'ngxauthfirebaseui.registerCardTitleText'"
-    [registerButtonText]="'ngxauthfirebaseui.registerButtonText'"
-    [guestButtonText]="'ngxauthfirebaseui.guestButtonText'"
-    [resetPasswordTabText]="'ngxauthfirebaseui.resetPasswordTabText'"
-    [resetPasswordInputText]="'ngxauthfirebaseui.resetPasswordInputText'"
-    [resetPasswordErrorRequiredText]="'ngxauthfirebaseui.resetPasswordErrorRequiredText'"
-    [resetPasswordErrorPatternText]="'ngxauthfirebaseui.resetPasswordErrorPatternText'"
-    [resetPasswordActionButtonText]="'ngxauthfirebaseui.resetPasswordActionButtonText'"
-    [resetPasswordInstructionsText]="'ngxauthfirebaseui.resetPasswordInstructionsText'"
-    [emailConfirmationTitle]="'ngxauthfirebaseui.emailConfirmationTitle'"
-    [emailConfirmationText]="'ngxauthfirebaseui.emailConfirmationText'"
+    signInTabText="Registrarse"
+    signInCardTitleText="Iniciando sesión"
+    loginButtonText="Iniciar sesión"
+    forgotPasswordButtonText="Se te olvidó tu contraseña ?"
+    nameText="Nombre"
+    nameErrorRequiredText="Se requiere el nombre"
+    nameErrorMinLengthText="¡El nombre es demasiado corto!"
+    nameErrorMaxLengthText="¡El nombre es muy largo!"
+    emailText="Email"
+    emailErrorRequiredText="Correo electronico es requerido"
+    emailErrorPatternText="Por favor, introduce una dirección de correo electrónico válida"
+    passwordText="Contraseña"
+    passwordErrorRequiredText="se requiere contraseña"
+    registerTabText="Registro"
+    registerCardTitleText="Registro"
+    registerButtonText="Registro"
+    guestButtonText="continua como invitado"
+    resetPasswordTabText="Restablecer la dirección de correo electrónico a la contraseña"
+    resetPasswordInputText="Restablecer la dirección de correo electrónico a la contraseña"
+    resetPasswordErrorRequiredText="Se requiere un correo electrónico para restablecer la contraseña!"
+    resetPasswordErrorPatternText="Por favor, introduce una dirección de correo electrónico válida"
+    resetPasswordActionButtonText="Reiniciar"
+    resetPasswordInstructionsText="Restablecimiento solicitado. Revise sus instrucciones de correo electrónico."
+    emailConfirmationTitle="¡Confirme su dirección de correo electrónico!"
+    emailConfirmationText="Se le ha enviado un correo electrónico de confirmación.\n   Revise su bandeja de entrada y haga clic en el enlace \ Confirmar mi correo electrónico\\ para confirmar su dirección de correo electrónico."
   >
   </ngx-auth-firebaseui>
   <mat-divider></mat-divider>
