fix: actualizar enlaces
- añadir enlace a docs.angular.lat
- quitar enlace de Facebook
- añadir enlace a GitHub

--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -20,26 +20,27 @@
         <a [routerLink]="['conferencias']">Conferencias</a>
       </li>
       <li>
+        <a href="https://docs.angular.lat/" rel="noopener" target="_blank">Documentación</a>
+      </li>
+      <li>
         <a [routerLink]="['organizar/meetup']">Guía de Meetups</a>
       </li>
       <!--      <li>-->
       <!--        <a [routerLink]="['terminos']">Términos</a>-->
       <!--      </li>-->
-      <li>
-        <a href="mailto:soporte@angular.lat">Soporte</a>
-      </li>
     </ul>
   </div>
   <div>
-    <h2>Sociales</h2>
+    <h2>Contacta</h2>
     <ul>
       <li>
         <a href="https://twitter.com/AngularHispana" rel="noopener" target="_blank">Twitter</a>
       </li>
       <li>
-        <a href="https://www.facebook.com/ComunidadAngularHispano" rel="noopener" target="_blank"
-          >Facebook</a
-        >
+        <a href="https://github.com/angular-hispano" rel="noopener" target="_blank">GitHub</a>
+      </li>
+      <li>
+        <a href="mailto:soporte@angular.lat">Correo de soporte</a>
       </li>
     </ul>
   </div>
