--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -34,6 +34,10 @@
         <mat-icon matListIcon>list_alt</mat-icon>
         Meetups
       </a>
+      <a mat-list-item href="https://docs.angular.lat" target="_blank" rel="noopener">
+        <mat-icon matListIcon>description</mat-icon>
+        Documentación
+      </a>
       <mat-list>
         <h3 matSubheader>Guías</h3>
         <a mat-list-item [routerLink]="['organizar/meetup']" routerLinkActive="active">
