build: ng update @angular/cli @angular/core @angular/fire @angular/material
- en CoC: Contribuyentes -> Colaboradores
- actualizar otras dependencias

--- a/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
+++ b/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
@@ -139,13 +139,13 @@
     <h2>6. Alcance</h2>
     <p>
       Esperamos que todos los participantes de la comunidad (organizadores, voluntarios,
-      contribuyentes pagados o de otro modo; patrocinadores; y otros invitados) se atengan a este
-      Código de Conducta en todos los espacios virtuales y presenciales, así como en todas las
-      comunicaciones de uno-a-uno pertinentes la comunidad.
+      colaboradores, contribuyentes pagados o de otro modo; patrocinadores; y otros invitados) se
+      atengan a este Código de Conducta en todos los espacios virtuales y presenciales, así como en
+      todas las comunicaciones de uno-a-uno pertinentes la comunidad.
     </p>
   </section>
   <section id="last-section">
-    <h3>Contribuyentes</h3>
+    <h3>Colaboradores</h3>
     <ul>
       <li>Alejandra Giraldo</li>
       <li>Vanessa Marely</li>
