--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -3,8 +3,8 @@
   <section>
     <h2>Nuestra visión</h2>
     <p>
-      Para construir una comunidad diversa de usuarios Angular que habla castellano y empoderarlos
-      para que tengan éxito en sus objetivos de hacer del mundo un lugar mejor.
+      Para construir una comunidad diversa de usuarios Angular hispanohablantes y empoderarlos para
+      que tengan éxito en sus objetivos de hacer del mundo un lugar mejor.
     </p>
   </section>
   <section>
@@ -15,9 +15,9 @@
     </p>
     En el marco de nuestra visión contemplamos:
     <ul>
-      <li>Ayudar al crecimiento profesional de desarrolladores Angular de habla castellana</li>
+      <li>Ayudar al crecimiento profesional de desarrolladores Angular hispanohablantes</li>
       <li>
-        Aportar capital intelectual para la traducción al castellano de la documentación de Angular
+        Aportar capital intelectual para la traducción al español de la documentación de Angular
       </li>
       <li>
         Brindar recomendaciones a todos los interesados en crear una comunidad Angular en su ciudad
