--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -15,9 +15,7 @@
     </p>
     En el marco de nuestra visión contemplamos:
     <ul>
-      <li>
-        Ayudar al crecimiento profesional de desarrolladores Angular de habla castellana
-      </li>
+      <li>Ayudar al crecimiento profesional de desarrolladores Angular de habla castellana</li>
       <li>
         Aportar capital intelectual para la traducción al castellano de la documentación de Angular
       </li>
