--- a/projects/web/src/app/page-not-found/page-not-found.component.html
+++ b/projects/web/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,5 @@
 <main>
-  <h4>
-    Lo sentimos, no se pudo encontrar el recurso solicitado (404).
-  </h4>
+  <h4>Lo sentimos, no se pudo encontrar el recurso solicitado (404).</h4>
   <br />
   <a mat-raised-button color="primary" [routerLink]="['']">
     <mat-icon>home</mat-icon>
