--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -1,14 +1,15 @@
-@import 'theme';
+@use '~@angular/material' as mat;
+@use 'theme';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core($custom-typography);
+@include mat.core(theme.$custom-typography);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($app-theme);
+@include mat.all-component-themes(theme.$app-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
