--- a/projects/web/src/_theme.scss
+++ b/projects/web/src/_theme.scss
@@ -1,37 +1,40 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@use 'sass:map';
+@use '~@angular/material' as mat;
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat-palette($mat-blue, 700);
-$app-accent: mat-palette($mat-red, 700);
+$app-primary: mat.define-palette(mat.$blue-palette, 700);
+$app-accent: mat.define-palette(mat.$red-palette, 700);
 
 // The warn palette is optional (defaults to red).
-$app-warn: mat-palette($mat-deep-orange);
+$app-warn: mat.define-palette(mat.$deep-orange-palette);
 
 // Override the grey background with white
-$mat-light-theme-background: (
-  status-bar: map_get($mat-grey, 300),
-  app-bar: map_get($mat-grey, 100),
-  background: map_get($mat-grey, A100),
+mat.$light-theme-background-palette: (
+  status-bar: map.get(mat.$grey-palette, 300),
+  app-bar: map.get(mat.$grey-palette, 100),
+  background: map.get(mat.$grey-palette, A100),
   hover: rgba(black, 0.04),
   card: white,
   dialog: white,
   disabled-button: rgba(black, 0.12),
   raised-button: white,
-  focused-button: $dark-focused,
-  selected-button: map_get($mat-grey, 300),
-  selected-disabled-button: map_get($mat-grey, 400),
-  disabled-button-toggle: map_get($mat-grey, 200),
-  unselected-chip: map_get($mat-grey, 300),
-  disabled-list-option: map_get($mat-grey, 200)
+  focused-button: rgba(black, 0.12),
+  selected-button: map.get(mat.$grey-palette, 300),
+  selected-disabled-button: map.get(mat.$grey-palette, 400),
+  disabled-button-toggle: map.get(mat.$grey-palette, 200),
+  unselected-chip: map.get(mat.$grey-palette, 300),
+  disabled-list-option: map.get(mat.$grey-palette, 200)
 );
 
 // Create the theme object (a Sass map containing all of the palettes).
-$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+$app-theme: mat.define-light-theme($app-primary, $app-accent, $app-warn);
 
-$custom-typography: mat-typography-config(
-  $body-1: mat-typography-level(16px, 24px, 400)
+$custom-typography: mat.define-typography-config(
+  $body-1: mat.define-typography-level(16px, 24px, 400)
 );
+
+$light-primary-text: white;
