--- a/projects/web/src/app/footer/footer.component.scss
+++ b/projects/web/src/app/footer/footer.component.scss
@@ -1,12 +1,13 @@
-@import '../../theme';
+@use '~@angular/material' as mat;
+@use '../../theme';
 
 footer {
   display: flex;
   box-sizing: border-box;
   flex-flow: row wrap;
   place-content: center;
-  background: mat-color($app-primary, 700);
-  color: $light-primary-text;
+  background: mat.get-color-from-palette(theme.$app-primary, 700);
+  color: theme.$light-primary-text;
   padding: 64px 16px 48px;
 
   > div {
@@ -24,11 +25,11 @@ footer {
 
     a {
       text-decoration: none;
-      color: $light-primary-text;
+      color: theme.$light-primary-text;
 
       &:hover,
       &:focus {
-        color: mat-color($app-primary, 50);
+        color: mat.get-color-from-palette(theme.$app-primary, 50);
         text-decoration: underline;
       }
     }
