--- a/projects/web/src/app/meetups/meetups.component.scss
+++ b/projects/web/src/app/meetups/meetups.component.scss
@@ -1,6 +1,7 @@
-@import '../../theme';
-@import '../../mixins';
-@import '../../variables';
+@use '~@angular/material' as mat;
+@use '../../theme';
+@use '../../mixins';
+@use '../../variables';
 
 main {
   padding: 32px 22px 80px;
@@ -8,7 +9,7 @@ main {
   h1,
   h2,
   h3 {
-    color: mat-color($app-primary);
+    color: mat.get-color-from-palette(theme.$app-primary);
   }
 
   section {
@@ -58,13 +59,13 @@ main {
   }
 
   // Match the Angular Material SideNav's behavior
-  @include breakpoint('601px') {
+  @include mixins.breakpoint('601px') {
     section {
       align-items: start;
     }
   }
 
-  @include breakpoint($large-tablet) {
+  @include mixins.breakpoint(variables.$large-tablet) {
     section {
       flex-direction: row;
       flex-wrap: wrap;
