chore(dependencies): update Angular Material to v13

--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @use 'theme';
 
 // Include the common styles for Angular Material. We include this here so that you only
