--- a/projects/web/src/app/nav/nav.component.scss
+++ b/projects/web/src/app/nav/nav.component.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @use '../../theme';
 
 // Take care: this component has ViewEncapsulation.None
