chore(eslint): enable @typescript-eslint and fix eslint errors

--- a/projects/web/src/app/auth/auth.component.html
+++ b/projects/web/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <main class="auth-container">
   <ngx-auth-firebaseui
     [providers]="[providers.Google]"
-    (onSuccess)="onSuccess($event)"
+    (onSuccess)="onSuccess()"
     (onError)="onError($event)"
     signInTabText="Registrarse"
     signInCardTitleText="Iniciando sesión"
