--- a/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
+++ b/projects/web/src/app/code-of-conduct/code-of-conduct.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1 class="mat-display-1">Código de Conducta</h1>
+  <h1 class="mat-headline-4">Código de Conducta</h1>
   <section>
     <h2>1. Propósito</h2>
     <p>
