--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1 class="mat-display-1">¡Bienvenidos!</h1>
+  <h1 class="mat-headline-4">¡Bienvenidos!</h1>
   <section>
     <h2>Nuestra visión</h2>
     <p>
