--- a/projects/web/src/app/nav/nav.component.scss
+++ b/projects/web/src/app/nav/nav.component.scss
@@ -1,20 +1,16 @@
-@use '@angular/material' as mat;
-@use '../../theme';
-
-// Take care: this component has ViewEncapsulation.None
 .sidenav-container {
   height: 100%;
 }
 .sidenav {
   width: 256px;
 
-  .mat-toolbar {
-    background: inherit;
-  }
-  a.active {
-    color: mat.get-color-from-palette(theme.$app-primary);
-  }
-  .mat-nav-list a.mat-list-item:hover {
-    background-color: mat.get-color-from-palette(theme.$app-primary, 50);
+  .mat-mdc-nav-list {
+    .mdc-list-item {
+      cursor: pointer;
+    }
+
+    .mat-mdc-subheader {
+      padding: 16px;
+    }
   }
 }
