--- a/projects/web/src/app/organize-meetup/organize-meetup.component.html
+++ b/projects/web/src/app/organize-meetup/organize-meetup.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1 class="mat-display-1">Guía para organizar Meetups</h1>
+  <h1 class="mat-headline-4">Guía para organizar Meetups</h1>
   <section>
     <h2>ACERCA DE COMO INICIAR</h2>
     <h3>1. Empiece con poco</h3>
