--- a/projects/web/src/app/conferences/conferences.component.scss
+++ b/projects/web/src/app/conferences/conferences.component.scss
@@ -23,18 +23,18 @@ main {
       width: 100%;
       max-width: 400px;
 
-      .mat-card {
+      .mat-mdc-card {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         margin: 8px;
         cursor: pointer;
 
-        .mat-card-subtitle {
+        .mat-mdc-card-subtitle {
           font-size: 14px;
         }
 
-        .mat-card-image {
+        .mat-mdc-card-image {
           margin: 0 0 16px;
           width: 100%;
 
@@ -44,10 +44,10 @@ main {
           }
         }
 
-        .mat-card-actions {
+        .mat-mdc-card-actions {
           padding: 0;
 
-          .mat-button {
+          .mat-mdc-button {
             text-transform: uppercase;
           }
         }
@@ -71,11 +71,11 @@ main {
         width: auto;
         max-width: none;
 
-        .mat-card {
+        .mat-mdc-card {
           width: 212px;
           height: 392px;
 
-          .mat-card-image {
+          .mat-mdc-card-image {
             margin: 0 0 4px;
             max-height: 260px;
           }
