--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -1,25 +1,23 @@
 @use '@angular/material' as mat;
 @use 'theme';
+@use 'app/nav/nav.theme.scss';
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should
-//    delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(theme.$custom-typography);`
-@include mat.all-legacy-component-typographies(theme.$custom-typography);
-@include mat.legacy-core();
+@include mat.core();
+@include mat.typography-hierarchy(theme.$custom-typography);
 
 // Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-legacy-component-themes(theme.$app-theme);
+@include mat.core-theme(theme.$app-theme);
+@include mat.toolbar-theme(theme.$app-theme);
+@include mat.icon-theme(theme.$app-theme);
+@include mat.tooltip-theme(theme.$app-theme);
+@include mat.snack-bar-theme(theme.$app-theme);
+@include mat.sidenav-theme(theme.$app-theme);
+@include mat.list-theme(theme.$app-theme);
+@include mat.button-theme(theme.$app-theme);
+@include mat.card-theme(theme.$app-theme);
+
+// Application theming
+@include nav.nav-theme(theme.$app-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
