chore: replace the Mattermost link with the Discord server link

--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         >
       </li>
       <li>
-        <a href="https://chat.angular.lat/" rel="noopener" target="_blank">Chatear</a>
+        <a href="https://discord.gg/4cWb6SKUcb" rel="noopener" target="_blank">Chatear</a>
       </li>
       <li>
         <a [routerLink]="['coc']">Código de conducta</a>
