--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -38,7 +38,7 @@
     <a
       mat-stroked-button
       color="primary"
-      href="https://chat.angular.lat"
+      href="https://discord.gg/4cWb6SKUcb"
       target="_blank"
       rel="noopener"
     >
