feat(*): eliminar enlaces de registro
- actualizar la marca X
- actualizar el botón de chat
- actualizar el enlace del chat en SideNav

--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -6,11 +6,6 @@
         <a [routerLink]="['acerca']">Conócenos</a>
       </li>
       <li>
-        <a href="https://goo.gl/forms/MZa4w3AeILjsoTGA2" rel="noopener" target="_blank"
-          >Regístrate</a
-        >
-      </li>
-      <li>
         <a href="https://discord.gg/4cWb6SKUcb" rel="noopener" target="_blank">Chatear</a>
       </li>
       <li>
@@ -34,7 +29,7 @@
     <h2>Contacta</h2>
     <ul>
       <li>
-        <a href="https://twitter.com/AngularHispana" rel="noopener" target="_blank">Twitter</a>
+        <a href="https://twitter.com/AngularHispana" rel="noopener" target="_blank">X</a>
       </li>
       <li>
         <a href="https://github.com/angular-hispano" rel="noopener" target="_blank">GitHub</a>
