--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -14,11 +14,7 @@
         <mat-icon matListIcon>group</mat-icon>
         Conócenos
       </a>
-      <a mat-list-item href="https://goo.gl/forms/MZa4w3AeILjsoTGA2" target="_blank" rel="noopener">
-        <mat-icon matListIcon>assignment_turned_in</mat-icon>
-        Regístrate Aquí
-      </a>
-      <a mat-list-item href="https://chat.angular.lat" target="_blank" rel="noopener">
+      <a mat-list-item href="https://discord.gg/4cWb6SKUcb" target="_blank" rel="noopener">
         <mat-icon matListIcon>chat</mat-icon>
         Chatear
       </a>
